--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,7 +278,7 @@ section{display: block;width: 100%;  height: 100%;}
   
   .btn{    font-size: 1.2rem; padding: 0.6rem 0.1rem;}
 
-  .bg-cover {    background-size:auto 100%;height: 100%;}
+  .bg-cover {    background-size: 100%;height: 100%;}
   .bg-cover.bg-01{  background-image: url('../images/mikimoto/mikimoto-1.jpg');}
   .bg-cover.bg-02{  background-image: url('../images/mikimoto/mikimoto-2.jpg');}
   .bg-cover.bg-03{  background-image: url('../images/mikimoto/mikimoto-3.jpg');}
