--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -42,7 +42,7 @@ body {
 }
 
 .page-section {
-    position: relative;
+  position: relative;
   height: 100vh; /* full viewport height */
   width: 100%;
   display: flex;
@@ -66,7 +66,13 @@ body {
   background: linear-gradient(180deg, #12162d, #1f264d);
 }
 .section5 {
-  background: linear-gradient(180deg, #1f264d, #2f3c6b);
+  background: linear-gradient(180deg, #1f254e, #2f3c6b);
+}
+.section6 {
+  background: linear-gradient(180deg, #2f3c6a, #344a7d);
+}
+.section7 {
+  background: linear-gradient(180deg, #344a7d, #344a7d);
 }
 
 /* Desktop image rules */
@@ -86,22 +92,35 @@ body {
 }
 
 .section-btn {
-    position: absolute;   /* relative to section, moves with section */
-    bottom: 100px;        /* 100px from bottom of the section */
-    left: 50%;            /* center horizontally */
-    transform: translateX(-50%);
-    padding: 12px 30px;
-    font-size: 16px;
-    color: #fff;
-    background-color: transparent;
-    border: 2px solid #fff;
-    border-radius: 8px;
-    text-decoration: none;
-    z-index: 10;
-    transition: all 0.3s ease;
+  position: absolute; /* relative to section, moves with section */
+  bottom: 80px; /* 100px from bottom of the section */
+  left: 50%; /* center horizontally */
+  transform: translateX(-50%);
+  padding: 12px 30px;
+  font-size: 20px;
+  color: #fff;
+  background-color: transparent;
+  border: 2px solid #fff;
+  border-radius: 8px;
+  text-decoration: none;
+  z-index: 10;
+  transition: all 0.3s ease;
 }
 
 .section-btn:hover {
-    box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.5);
-    background-color: rgba(255,255,255,0.05);
+  box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+@media (max-width: 1024px) {
+  .section-btn {
+    font-size: 16px;
+    bottom: 140px;
+    transform: translateX(-50%);
+    left: 50%;
+       width: 240px;          /* take 80% of screen width */
+        max-width: 300px;    /* optional max width */
+       text-align: center;
+        font-size: 16px;
+  }
 }
