--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -115,8 +115,9 @@ body {
 
 .slider-container {
   position: relative;
-  width: 50%;
+  width: 45%;
   overflow: hidden;
+  margin-left: 12vw;
 }
 
 .slider {
@@ -157,6 +158,11 @@ button:hover {
   .slider-container {   
     width: 100%;
   }
+
+  .section4 .position-absolute {
+    top: 15%;
+  }
+  
   
 }
 
