--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -14,7 +14,7 @@ html, body {
   font-family: 'Helvetica Neue', sans-serif;
   margin: 0;
   height: 100%;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   scroll-snap-type: y mandatory;
   background-color: #0d1429;
 }
@@ -29,13 +29,13 @@ h1, h2 {
 /* === Sticky Icons === */
 .sticky-icon {
   position: fixed;
-  top: 10px;
+  top: 5px;
   z-index: 1000;
   width: auto;
   height: 70px;
 }
-.sticky-icon.left { left: 30px; }
-.sticky-icon.right { right: 30px; }
+.sticky-icon.left { left: 20px; }
+.sticky-icon.right { right: 20px; }
 
 @media (max-width: 1024px) {
   .sticky-icon {
@@ -69,7 +69,7 @@ h1, h2 {
 
 /* === Section Images === */
 .section-img {
-  height: 96vh;
+  height: 100vh;
   width: auto;
   object-fit: contain;
 }
