--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -14,7 +14,8 @@ html, body {
   font-family: 'Helvetica Neue', sans-serif;
   margin: 0;
   height: 100%;
-  /* overflow-y: scroll; */
+overflow-x: hidden;  /* Prevent horizontal scroll */
+  overflow-y: auto;    /* Allow vertical scroll */
   scroll-snap-type: y mandatory;
   background-color: #0d1429;
 }
