--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -222,7 +222,7 @@ h1, h2 {
 .form-container.left {
     position: absolute;
     top: 50%;                 /* vertical center */
-    left: 25%;                /* center of left half */
+    /* left: 25%; */
     transform: translate(-50%, -50%); /* horizontal center in left half and vertical center */
     width: 50%;               /* occupy left half */
     max-width: 400px;
@@ -361,4 +361,7 @@ button:hover {
   max-width: 100vw;
   bottom: 0vh;
   position: absolute;
+  @media (min-width: 1024px) {
+    display: none;
+   }
 }
