--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -95,7 +95,7 @@ h1, h2 {
   font-size: 18px;
   color: #fff;
   background-color: transparent;
-  border: 2px solid #fff;
+  /* border: 2px solid #fff; */
   border-radius: 8px;
   text-decoration: none;
   z-index: 10;
