--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -107,6 +107,7 @@ h1, h2 {
 } */
 
 .transparent-btn {
+  padding: 0;
   background: none;
   border: none;
 }
@@ -183,7 +184,7 @@ h1, h2 {
 /* Checkbox Label Gray */
 .form-check-label {
   color: #888;
-  font-size: 12px;
+  font-size: 14px;
   font-family: 'MyriadVariableConcept-Roman', sans-serif;
 }
 
@@ -241,6 +242,9 @@ h1, h2 {
   padding-left: 30px;
   padding-right: 30px;
 }
+.form-container.right .form-content {
+  min-width: 100% !important;
+}
     /* Left form fully centered */
     .form-container.left {
         left: 0;
@@ -266,6 +270,7 @@ h1, h2 {
     .form-container.right .form-image {
         /* display: none; */
         width: 100%;
+        max-width: 90%
     }
 }
 
