--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -503,39 +503,9 @@ button:hover {
   }
 
 
-  @media (min-width: 1280px) {
-  .form-container.left {
-    position: absolute;
-        top: unset;
-        left: unset;
-        transform: unset;
-        width: 50%;
-        width: 130vh;
-        max-width: 100%;
-        padding: 20px;
-        border-radius: 8px;
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-        z-index: 2;
-        /* background-color: red; */
-      
-    }	
 
-  .section7 .form-container .form-content {
-    width: 100%;
-    max-width: 72vh;
-    padding-left: 8vw;
-    padding-right: 8vw;
 
-  }
-  .section7 .form-image {
-    margin-left: 8vw;
-  }
-
-  }
-
-    @media (min-width: 1100px) {
+  @media (min-width: 1100px) {
   .form-container.left {
     position: absolute;
         top: unset;
@@ -565,4 +535,40 @@ button:hover {
     margin-left: 0vw;
   }
 
+  }
+
+    @media (min-width: 1280px) {
+  .form-container.left {
+    position: absolute;
+        top: unset;
+        left: unset;
+        transform: unset;
+        width: 50%;
+        width: 130vh;
+        max-width: 100%;
+        padding: 20px;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        z-index: 2;
+        /* background-color: red; */
+      
+    }	
+
+  .section7 .form-container .form-content {
+    width: 100%;
+    max-width: 72vh;
+    padding-left: 8vw;
+    padding-right: 8vw;
+
+  }
+  /* .section7 .form-image {
+    margin-left: 8vw;
+  } */
+
+   .section7 .form-container.left .form-image {
+      width: 47vh;
+       margin-left: 8vw;
+    }
   }
