--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -468,7 +468,7 @@ button:hover {
 /* Inputs */
 .form-control {
   background: transparent !important;
-  height: 3.5vh;
+  height: 39px;
   border: 1px solid #7f7f7f !important;
   color: #fff !important;
   border-radius: 0 !important;   /* ← square corners */
