--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -81,6 +81,7 @@ h1, h2 {
 .section5 { background: linear-gradient(180deg, #1d264e, #303c6b); }
 .section6 { background: linear-gradient(180deg, #303d6b, #34477a); }
 .section7 { background: linear-gradient(180deg, #34497c, #34497c); }
+.section8 { background: linear-gradient(180deg, #34497c, #314275); }
 
 /* === Section Images === */
 .section-img {
